# python-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  00_STARTING_POINT.txt  ANALYSE_FRAIS_NOWPAYMENTS.md  ANALYSE_PRE_DEPLOIEMENT.md  ANALYSE_PRE_DEPLOIEMENT_UPDATED.md  ANALYSIS.md  ANALYTICS_CHARTS_README.md  AUDIT_COMPLET_26_OCT.md  BACKUP_CONFIGURATION.md  BOT_FUNCTIONS_AUDIT.md  CAROUSEL_FIXES_COMPLETE.md  CAROUSEL_UX_UPGRADE.md  CLAUDE.md  CLAUE.md  CLEANUP_V2_SUMMARY.md  CLOSED_CIRCUIT_IMPLEMENTED.md  CLOUDFLARE_TUNNEL_ALTERNATIVES.md  CONNECTION_POOL_MIGRATION.md  DATABASE_CLEANUP.md  DEPLOIEMENT_RAILWAY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DIRECT_WORKFLOW_IMPLEMENTED.md  Dockerfile  EMAILS_TO_ADD.md  EXECUTIVE_SUMMARY.md  EXEMPLE_RENDU_BADGES.md  FINAL_IMPLEMENTATION_REPORT.md  FIXES_APPLIED.md  GUIDE_LANCEMENT.md  IMPLEMENTATION_ANALYTICS_GRAPHIQUES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFIED.md  INDEX.md  IPN_URL_CONFIGURATION.md  LAUNCH_READY.md  LIBRARY_SYSTEM.md  (+98 more)
.github/workflows/: ci.yml
BACKUP/: b2_storage_service.py  i18n.py  ipn_server.py  sell_handlers.py
app/: main.py
app/core/: __init__.py  analytics_engine.py  chart_generator.py  config.py  database_adapter.py  database_init.py  db.py  db_helpers.py  db_pool.py  email_service.py  email_templates_extended.py  error_messages.py  file_utils.py  file_validation.py  i18n.py  i18n_VRAIMENT_OLD_BACKUP.py  image_utils.py  logging.py  middleware.py  pdf_utils.py  rate_limiter.py  seller_notifications.py  settings.py  state_manager.py  user_utils.py  utils.py  validation.py
app/integrations/: ipn_server.py  nowpayments_client.py
app/services/: b2_storage_service.py  chart_service.py  (+14 more)
docs/: ARCHITECTURE_ANALYSIS.md  BUYER_WORKFLOW_V2_IMPLEMENTATION_REPORT.md  BUYER_WORKFLOW_V2_SPEC.md  DATABASE_SPEC.md  FEATURES_SPECTACULAIRES.md  SELLER_WORKFLOW_SPEC.md  TESTING.md  UX_IMPROVEMENTS.md
ferus-landing/: ANALYSE_AMELIORATIONS.md  POLISH_PREMIUM_FEATURES.md  README.md  index.html  index.html.new  stock.html  stock2.html
migrations/: 003_add_soft_delete.sql  004_add_telegram_file_ids.sql  005_download_tokens.sql  add_preview_url.sql
scraper/: .gitignore  ANTI_DETECTION_GUIDE.md  COLD_EMAIL.md  EXAMPLES.md  GUIDES_INDEX.md  IMPROVEMENTS.md  PLAN_30_JOURS.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  ULTIMATE_GUIDE.md  config.py  link_parser.py  link_parser_old.py  main.py  quick_start.sh  requirements.txt  scraper_base.py  test_all.py  test_link_parser.py  tiktok_scraper.py  twitter_scraper.py
scripts/: fix_invalid_file_urls.py  step0_delete.py
tests/: test_analytics_demo.py  test_entities.py  test_phase1_visual_cards.py  test_product_creation_flow.py  test_purchase_flow.py  test_repos.py  test_services.py  test_utils.py  test_workflows.py
(+114 files in other folders)
